# test-pro

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: publish_to_github.py  run_tests.ps1  run_tests.sh
src/app/: __init__.py  main.py
src/test_pro/: __init__.py  main.py
tests/: __init__.py  test_main.py
